# EV3Rover

./: .devcontainer.json  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  big_arena_commands.txt  main.cpp  readme.md  small_arena.txt  todos.md
Datasets/: ev3-734.txt
Hardware/: CMakeLists.txt  hardware-test.cpp  hardware.cpp
Hardware/Motion/: CMakeLists.txt  motion-test.cpp  motion.cpp
Hardware/Motion/include/: motion.h
Hardware/Observation/: CMakeLists.txt  observation-test.cpp  observation.cpp
Hardware/Observation/include/: observation.h
Hardware/include/: hardware.h
Hardware/include-scope/: hardware-scope.h
Motion/: CMakeLists.txt  motion.cpp  motor.cpp
Motion/include/: motion.h
Observation/: CMakeLists.txt  observation-test.cpp  observation.cpp
Observation/include/: observation.h
Report/: CMakeLists.txt
Report/include/: report.h
SparseGSLAM/: CMakeLists.txt
Test/: CMakeLists.txt
Test/ev3dev-dummy/: ev3dev.h
Tests/: CMakeLists.txt  test.cpp
Tests/ev3dev-dummy/: ev3dev.h
datasets/: ev3-154.txt
